Changes to test the productController and productService with the pageable return